--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+*.pyc
+memapixenv/
+settings.py
+*.json
+*.log
+local_settings.py
+env/
+.DS_Store
+*.sqlite3
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
